<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg" >

    <TextView
        android:id="@+id/member_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_title_text"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/member_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/member_title_text"
        android:text="@string/member_id_text" />

    <ListView
        android:id="@+id/optionsTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/feedback_text_view"
        android:layout_below="@id/member_id_text"
        android:layout_centerHorizontal="true" >

    </ListView>

    <TextView
        android:id="@+id/feedback_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/discover_secured_text_view"
        android:layout_centerHorizontal="true"
        android:text="@string/feedback_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/discover_secured_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/discover_secured_text" />

    <ImageView
        android:id="@+id/lock_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/feedback_text_view"
        android:layout_toRightOf="@id/discover_secured_text_view"
        android:contentDescription="@string/discover_copyright_text"
        android:src="@drawable/lock" 
        android:paddingLeft="8dp"
        android:paddingBottom="3dp"/>

	</RelativeLayout>