<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/gradient_bg"             
        android:paddingBottom="@dimen/CONTENT_PADDING"
        android:paddingLeft="@dimen/CONTENT_PADDING"
        android:paddingRight="@dimen/CONTENT_PADDING"
        android:paddingTop="@dimen/CONTENT_PADDING">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/account_info_confirm_step_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/account_info_confirm_step_title_text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_info_confirm_first_paragraph_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_step_title_label"
                android:layout_marginTop="8dp"
                android:text="@string/account_info_confirm_first_paragraph_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
            
            <TextView
                android:id="@+id/account_info_confirm_security_precaution_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_first_paragraph_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_security_precaution_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />

            <TextView
                android:id="@+id/account_info_confirm_summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_security_precaution_label"
                android:layout_marginTop="8dp"
                android:text="@string/account_info_confirm_summary_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" />
            
            
            <TextView
                android:id="@+id/account_info_confirm_id_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_summary_label"
                android:layout_marginTop="8dp"
                android:text="@string/account_info_confirm_id_title_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
            <TextView
                android:id="@+id/account_info_confirm_email_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_id_title_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_email_title_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
            <TextView
                android:id="@+id/account_info_confirm_account_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_email_title_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_account_title_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
            
            <TextView
                android:id="@+id/account_info_confirm_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/account_info_confirm_id_title_label"
                android:layout_alignLeft="@+id/account_info_confirm_account_stars_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_id_placeholder_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" 
                android:textStyle="bold"/>
            
            <TextView
                android:id="@+id/account_info_confirm_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/account_info_confirm_email_title_label"
                android:layout_alignLeft="@id/account_info_confirm_account_stars_label"
                android:layout_marginTop="4dp"
                android:text="@string/email_placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE"
                android:textStyle="bold"  />
            
            <TextView
                android:id="@+id/account_info_confirm_account_stars_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_alignBaseline="@id/account_info_confirm_account_title_label"
                android:layout_toRightOf="@id/account_info_confirm_account_title_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_account_stars_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/account_info_confirm_account_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/account_info_confirm_account_stars_label"
                android:layout_below="@+id/account_info_confirm_email_title_label"
                android:paddingTop="4dp"
                android:text="@string/account_info_confirm_account_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE"
                android:textStyle="bold" />
            
			<TextView
                android:id="@+id/account_info_confirm_note_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_account_title_label"
                android:layout_marginTop="16dp"
                android:text="@string/account_info_confirm_note_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
			
            <Button
                android:id="@+id/account_info_confirm_home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_info_confirm_note_label"
                android:layout_centerHorizontal="true"
                android:text="@string/home_text" 
                android:layout_marginTop="8dp"/>
            
          <TextView
                android:id="@+id/feedback_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/account_info_confirm_home_button"
                android:text="@string/feedback_text"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/discover_copyright_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feedback_label"
                android:layout_centerHorizontal="true"
                android:text="@string/discover_copyright_text"
                android:textSize="@dimen/LIGHT_TEXT_SIZE" />
        
        </RelativeLayout>

    </ScrollView>
