<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:paddingBottom="@dimen/content_padding"
    android:paddingLeft="@dimen/content_padding"
    android:paddingRight="@dimen/content_padding"
    android:paddingTop="@dimen/content_padding" >

    <TextView
        android:id="@+id/forgot_credentials_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_credentials_text"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/black"/>

    
    <ListView
        android:id="@+id/optionsTable"
        android:background="@drawable/rounded_table_corners_no_padding"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_credentials_label"
        android:layout_centerHorizontal="true" >
    </ListView>
    
    <TableRow
       android:id="@+id/account_info_help_row"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="32dp" 
       android:layout_above="@+id/feedback_text_view">

            <TextView
                android:id="@+id/need_help_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/need_help_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/help_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/need_help_number_text"
                android:textColor="@color/blue" />
            
     </TableRow>

    <TextView
        android:id="@+id/feedback_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/discover_secured_text_view"
        android:layout_centerHorizontal="true"
        android:text="@string/feedback_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/discover_secured_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/discover_secured_text" />

    <ImageView
        android:id="@+id/lock_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/feedback_text_view"
        android:layout_toRightOf="@id/discover_secured_text_view"
        android:contentDescription="@string/discover_copyright_text"
        android:src="@drawable/lock" 
        android:paddingLeft="8dp"
        android:paddingBottom="3dp"/>

	</RelativeLayout>